Bug 1715482 - Geolocation should gracefully handle Documents that are not fully active r=saschanaz

Spec change https://github.com/w3c/geolocation-api/pull/97

Differential Revision: https://phabricator.services.mozilla.com/D117273